Fix timer alignment

--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ p {
 
 .timer-wrapper {
   border: solid;
-  position: fixed;
-  left: 277px;
+  position: absolute;
+  left: 50px;
   top: 40%;
   font-size: 4rem;
   border-radius: 50%;
@@ -50,6 +50,9 @@ p {
   justify-content: center;
   grid-gap: 16px;
   grid-template-columns: repeat(6, 140px);
+  max-width: 1650px;
+  margin-inline: auto;
+  position: relative;
   /* grid-template-rows: repeat(2, calc(140px / 2 * 3)); */
 }
 
